--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,5 @@
 [buildout]
-parts = env ipython sphinx nose pylint epydoc
+parts = env ipython sphinx nose pylint epydoc supervisor
 develop = .
 
 pkg-name = tornadotest
@@ -11,11 +11,18 @@ recipe = zc.recipe.egg
 eggs = 
 # from easy_install
      zc.recipe.egg
-     docutils
      tornadotest
 
 
 interpreter = python
+
+
+[supervisor]
+recipe = collective.recipe.supervisor
+
+programs = 
+         10 tornado ${buildout:bin-directory}/ttest
+
 
 [ipython]
 recipe = zc.recipe.egg
